--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,20 @@
-alembic==0.9.9
-bcrypt==3.1.4
-blinker==1.4
-certifi==2018.1.18
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-Flask==1.0.2
-Flask-Bcrypt==0.7.1
-Flask-Dance==0.14.0
-Flask-DebugToolbar==0.10.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
-Flask-OAuth==0.12
-Flask-OAuthlib==0.9.4
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-gunicorn==20.0.4
-httplib2==0.11.3
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-lazy==1.3
-Mako==1.0.7
-MarkupSafe==1.0
-oauth2==1.9.0.post1
-oauthlib==2.0.7
-Pillow==5.1.0
-pycparser==2.18
-python-dateutil==2.7.2
-python-editor==1.0.3
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
-SQLAlchemy==1.2.6
-SQLAlchemy-Utils==0.33.2
-urllib3==1.22
-URLObject==2.4.3
-Werkzeug==0.14.1
-wincertstore==0.2
-WTForms==2.1
+astroid==2.2.5
+Click==7.0
+colorama==0.4.1
+Django==2.2.3
+Flask==1.1.1
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lazy-object-proxy==1.4.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pylint==2.3.1
+pytz==2019.1
+six==1.12.0
+sqlparse==0.3.0
+typed-ast==1.4.0
+virtualenv==16.6.1
+virtualenvwrapper-win==1.2.5
+Werkzeug==0.15.6
+wrapt==1.11.2
