--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,54 @@
+alembic==1.3.3
+asgiref==3.2.3
 astroid==2.2.5
+Babel==2.8.0
+blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
-Django==2.2.3
+Django==3.0.3
+dominate==2.4.0
 Flask==1.1.1
+Flask-BabelEx==0.9.4
+Flask-Bootstrap==3.3.7.1
+Flask-Dance==3.0.0
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.5.2
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
+gunicorn==20.0.4
+idna==2.8
+image==1.5.28
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.11.0
 lazy-object-proxy==1.4.1
+Mako==1.1.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
+oauthlib==3.1.0
+passlib==1.7.2
+Pillow==7.0.0
 pylint==2.3.1
-pytz==2019.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
+requests==2.22.0
+requests-oauthlib==1.3.0
 six==1.12.0
+speaklater==1.3
+SQLAlchemy==1.3.13
+SQLAlchemy-Utils==0.36.1
 sqlparse==0.3.0
 typed-ast==1.4.0
-virtualenv==16.6.1
-virtualenvwrapper-win==1.2.5
-Werkzeug==0.15.6
+urllib3==1.25.8
+URLObject==2.4.3
+visitor==0.1.3
+Werkzeug==0.16.1
+wincertstore==0.2
 wrapt==1.11.2
+WTForms==2.2.1
