Signed-off-by: mrsugar17 <mrsugar17@users.noreply.github.com>new

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,9 +35,11 @@ Mako==1.1.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 oauthlib==3.1.0
+ordereddict==1.1
 passlib==1.7.2
 Pillow==7.0.0
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
 PyGithub==1.47
 PyJWT==1.7.1
 pylint==2.3.1
